--- a/projects.html
+++ b/projects.html
@@ -300,6 +300,9 @@
       <div id="Applications" class="tabcontent">
         <div id="applicationPanel">
           <div class="tabSide">
+             <button class="tablinksSide" onclick="openTabSide(event, 'pv')">
+              Panoramic Viewer
+            </button>
             <button class="tablinksSide" onclick="openTabSide(event, 'hdt')">
               Help Desk Tool
             </button>
@@ -316,6 +319,116 @@
               Travel Request
             </button>
           </div>
+
+
+
+
+
+
+
+        <div id="pv" class="tabcontentSide" style="display: none;">
+          
+<div class="appProjHeader">
+              <h2>Revit Library Addin</h2>
+              <p>
+                <b>
+                  [C#] [.Net] [Visual Studio] [Windows Forms] [SQL] [LINQ]
+                  [Revit API]
+                </b>
+              </p>
+            </div>
+
+            <div class="appSlideshowContainer">
+              <iframe width="40%" src="https://youtu.be/vk2kJqgfMpY" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+              <div class="appFeatures">
+                <h3>Features</h3>
+                <ul>
+                  <li>
+                   
+                  </li>
+                  <li>
+                   </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="appSlideshowContainer">
+              <div class="appStory">
+                <p>
+                  This app was created whilst working at an Architecture firm
+                  were the staff were using a program called Unifi. Unifi
+                  acted as a centralized point to store Revit Families that
+                  could then be imported into projects
+                </p>
+                <p>
+                  The licencing contracts for the software were coming to an
+                  end and the company was not wanting to renew the lengthy
+                  lock in contract. I was tasked to create a similar
+                  application with a strict timeline as the licences were soon
+                  to expire. I created a Beta version of my Revit Tools within
+                  three days that allowed the Architects to continue there
+                  work whilst I continued to upgrade and maintain the software
+                  by pushing out patches via Group Policy
+                </p>
+
+                <p>
+                  As time went on employees began requesting additional
+                  features such as an Auto Save feature and an Admin upload
+                  panel. I ensured that the program would allow for such
+                  scale-ability and therefore became a platform for any
+                  additional features the copmany may desire.
+                </p>
+              </div>
+              <div class="slideshow">
+                    <a class="slideshowLinks HDImg" href="img/slideshow/Pano1.png" data-lightbox="Panoramic Viewer"
+                  data-title="Home Page of the app"><img class="projectSlideshow"
+                    src="img/slideshow/Pano1.png" alt="" /></a>
+
+                <a class="slideshowLinks HDImg" href="img/slideshow/Pano2.png" data-lightbox="Panoramic Viewer"
+                  data-title="Panoramic Setup Room Images"><img class="projectSlideshow" src="img/slideshow/Pano2.png"
+                    alt="" /></a>
+
+                <a class="slideshowLinks HDImg" href="img/slideshow/Pano3.png" data-lightbox="Panoramic Viewer"
+                  data-title="Panoramic Setup Waypoints"><img
+                    class="projectSlideshow" src="img/slideshow/Pano3.png" alt="" /></a>
+
+                <a class="slideshowLinks HDImg" href="img/slideshow/Pano4.png" data-lightbox="Panoramic Viewer"
+                  data-title="Panoramic Setup Waypoints"><img class="projectSlideshow"
+                    src="img/slideshow/Pano4.png" alt="" /></a>
+
+                    <a class="slideshowLinks HDImg" href="img/slideshow/Pano5.png" data-lightbox="Panoramic Viewer"
+                  data-title="Completed Panoramic with preview and link"><img class="projectSlideshow"
+                    src="img/slideshow/Pano5.png" alt="" /></a>
+
+                    <a class="slideshowLinks HDImg" href="img/slideshow/Pano6.png" data-lightbox="Panoramic Viewer"
+                  data-title="Panoramic View through hosted link"><img class="projectSlideshow"
+                    src="img/slideshow/Pano6.png" alt="" /></a>
+
+                    <a class="slideshowLinks HDImg" href="img/slideshow/Pano7.png" data-lightbox="Panoramic Viewer"
+                  data-title="Panoramic View through hosted link"><img class="projectSlideshow"
+                    src="img/slideshow/Pano7.png" alt="" /></a>
+              </div>
+            </div>
+
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
           <div id="hdt" class="tabcontentSide" style="display: none;">
             <div class="appProjHeader">
