--- a/projects.html
+++ b/projects.html
@@ -339,7 +339,7 @@
             </div>
 
             <div class="appSlideshowContainer">
-              <iframe width="40%" src="https://youtu.be/vk2kJqgfMpY" frameborder="0"
+              <iframe width="40%" src="https://www.youtube.com/watch?v=vk2kJqgfMpY&feature=youtu.be" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <div class="appFeatures">
@@ -382,31 +382,31 @@
                 </p>
               </div>
               <div class="slideshow">
-                    <a class="slideshowLinks HDImg" href="img/slideshow/Pano1.png" data-lightbox="Panoramic Viewer"
+                    <a class="slideshowLinks PVImg" href="img/slideshow/Pano1.png" data-lightbox="Panoramic Viewer"
                   data-title="Home Page of the app"><img class="projectSlideshow"
                     src="img/slideshow/Pano1.png" alt="" /></a>
 
-                <a class="slideshowLinks HDImg" href="img/slideshow/Pano2.png" data-lightbox="Panoramic Viewer"
+                <a class="slideshowLinks PVImg" href="img/slideshow/Pano2.png" data-lightbox="Panoramic Viewer"
                   data-title="Panoramic Setup Room Images"><img class="projectSlideshow" src="img/slideshow/Pano2.png"
                     alt="" /></a>
 
-                <a class="slideshowLinks HDImg" href="img/slideshow/Pano3.png" data-lightbox="Panoramic Viewer"
+                <a class="slideshowLinks PVImg" href="img/slideshow/Pano3.png" data-lightbox="Panoramic Viewer"
                   data-title="Panoramic Setup Waypoints"><img
                     class="projectSlideshow" src="img/slideshow/Pano3.png" alt="" /></a>
 
-                <a class="slideshowLinks HDImg" href="img/slideshow/Pano4.png" data-lightbox="Panoramic Viewer"
+                <a class="slideshowLinks PVImg" href="img/slideshow/Pano4.png" data-lightbox="Panoramic Viewer"
                   data-title="Panoramic Setup Waypoints"><img class="projectSlideshow"
                     src="img/slideshow/Pano4.png" alt="" /></a>
 
-                    <a class="slideshowLinks HDImg" href="img/slideshow/Pano5.png" data-lightbox="Panoramic Viewer"
+                    <a class="slideshowLinks PVImg" href="img/slideshow/Pano5.png" data-lightbox="Panoramic Viewer"
                   data-title="Completed Panoramic with preview and link"><img class="projectSlideshow"
                     src="img/slideshow/Pano5.png" alt="" /></a>
 
-                    <a class="slideshowLinks HDImg" href="img/slideshow/Pano6.png" data-lightbox="Panoramic Viewer"
+                    <a class="slideshowLinks PVImg" href="img/slideshow/Pano6.png" data-lightbox="Panoramic Viewer"
                   data-title="Panoramic View through hosted link"><img class="projectSlideshow"
                     src="img/slideshow/Pano6.png" alt="" /></a>
 
-                    <a class="slideshowLinks HDImg" href="img/slideshow/Pano7.png" data-lightbox="Panoramic Viewer"
+                    <a class="slideshowLinks PVImg" href="img/slideshow/Pano7.png" data-lightbox="Panoramic Viewer"
                   data-title="Panoramic View through hosted link"><img class="projectSlideshow"
                     src="img/slideshow/Pano7.png" alt="" /></a>
               </div>
