--- a/projects.html
+++ b/projects.html
@@ -329,19 +329,16 @@
         <div id="pv" class="tabcontentSide" style="display: none;">
           
 <div class="appProjHeader">
-              <h2>Revit Library Addin</h2>
+              <h2>Panoramic Viewer</h2>
               <p>
                 <b>
-                  [C#] [.Net] [Visual Studio] [Windows Forms] [SQL] [LINQ]
-                  [Revit API]
+                  [C#] [.Net] [Visual Studio] [MVC] [Pannellum] [HTML/CSS/JS]
                 </b>
               </p>
             </div>
 
             <div class="appSlideshowContainer">
-              <iframe width="40%" src="https://www.youtube.com/watch?v=vk2kJqgfMpY&feature=youtu.be" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/vk2kJqgfMpY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <div class="appFeatures">
                 <h3>Features</h3>
                 <ul>
