Finished the paneelum

--- a/projects.html
+++ b/projects.html
@@ -343,9 +343,16 @@
                 <h3>Features</h3>
                 <ul>
                   <li>
-                   
+                    Creation of Panoramic Viewer 
                   </li>
                   <li>
+                    Hosted link for the viewer that can be viewed externally by clients
+                   </li>
+                   <li>
+                    Optional settings for branding, floor plan and waypoints
+                   </li>
+                   <li>
+                    Control panel to view and copy IFrame code for embedding
                    </li>
                 </ul>
               </div>
@@ -354,28 +361,23 @@
             <div class="appSlideshowContainer">
               <div class="appStory">
                 <p>
-                  This app was created whilst working at an Architecture firm
-                  were the staff were using a program called Unifi. Unifi
-                  acted as a centralized point to store Revit Families that
-                  could then be imported into projects
+                  Pannellum is a lightweight, free, and open source panorama viewer for the web. Built using HTML5, CSS3, JavaScript, and WebGL, it is plug-in free. 
+                  <a href="https://pannellum.org/" target="_blank">(https://pannellum.org/)</a>
                 </p>
                 <p>
-                  The licencing contracts for the software were coming to an
-                  end and the company was not wanting to renew the lengthy
-                  lock in contract. I was tasked to create a similar
-                  application with a strict timeline as the licences were soon
-                  to expire. I created a Beta version of my Revit Tools within
-                  three days that allowed the Architects to continue there
-                  work whilst I continued to upgrade and maintain the software
-                  by pushing out patches via Group Policy
+                  I was tasked to create a user-friendly workflow to allow employees to create interactive panoramic walkthrough by leveraging the power of the open 
+                  source software Pannellum. The current workflow would mean manually altering code to place way points and to target the 360-degree render output 
+                  images of the projects.
                 </p>
 
                 <p>
-                  As time went on employees began requesting additional
-                  features such as an Auto Save feature and an Admin upload
-                  panel. I ensured that the program would allow for such
-                  scale-ability and therefore became a platform for any
-                  additional features the copmany may desire.
+                 I thought this process would be too cumbersome for our small IT team, so I set out to create a web application to generate the code automatically. 
+                 The web application I created allowed employees to upload there renders and allow them to place waypoints to other rooms. I then extended the 
+                 experience by allowing a floor plan quick travel option.
+                </p>
+                <p>
+                  The experiences then are assigned a unique link and hosted on the company’s web server allowing employees to send out the links for marketing purposes
+                   or to their employees to embed on their websites as the tool also allows easy generation of Iframe code.
                 </p>
               </div>
               <div class="slideshow">
