last last style

--- a/projects.html
+++ b/projects.html
@@ -302,7 +302,7 @@
       <div id="Applications" class="tabcontent">
         
         <div id="applicationPanel">
-          <h1 id="MobileApplicationBanner" style="display: none;">Please view the desktop site for list of projects</h1>
+          <h3 id="MobileApplicationBanner" style="display: none; margin-top: 1em;">Please view the desktop site for a list of projects and demonstrations</h3>
           <div class="tabSide">
              <button class="tablinksSide" onclick="openTabSide(event, 'pv')">
               Panoramic Viewer
