--- a/projects.html
+++ b/projects.html
@@ -91,19 +91,19 @@
 
       <!-- Tab links -->
       <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'Applications')">
+        <button class="tablinks active" onclick="openTab(event, 'Applications')">
           Applications
         </button>
         <button class="tablinks" onclick="openTab(event, 'Games')">
           Games
         </button>
-        <button class="tablinks active" onclick="openTab(event, 'Websites')">
+        <button class="tablinks" onclick="openTab(event, 'Websites')">
           Websites
         </button>
       </div>
 
       <!-- Tab content -->
-      <div id="Websites" class="tabcontent" style="display: block">
+      <div id="Websites" class="tabcontent" >
 
         <div class="project-container">
           <div class="project-description">
@@ -299,7 +299,7 @@
       </div>
 
      
-      <div id="Applications" class="tabcontent">
+      <div id="Applications" class="tabcontent" style="display: block">
         
         <div id="applicationPanel">
           <h3 id="MobileApplicationBanner" style="display: none; margin-top: 1em;">Please view the desktop site for a list of projects and demonstrations</h3>
